# xiaoanimg

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/src/main/res/values/: themes.xml
buildSrc/src/main/kotlin/: GenerateVersionInfoTask.kt  ProjectConfig.kt
desktop/: build.gradle.kts  proguard-rules-jvm.pro
desktop/src/desktopMain/kotlin/: Main.kt
desktop/src/desktopMain/kotlin/theme/: LinuxThemeManager.kt  MacOSThemeManager.kt  WindowsThemeManager.kt
desktop/src/desktopMain/resources/macos/: Icon.icns
gradle/: libs.versions.toml
native/: Cargo.toml
native/src/: lib.rs
shared/: build.gradle.kts
shared/src/androidMain/kotlin/native/: PayloadExtractNative.android.kt
shared/src/androidMain/kotlin/util/: FilePicker.android.kt  PlatformUtils.android.kt  Preferences.android.kt
shared/src/commonMain/composeResources/drawable/: ic_clear.xml  ic_img.xml  ic_local.xml  ic_paste.xml  ic_url.xml
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/composeResources/values-zh-rCN/: strings.xml
shared/src/commonMain/kotlin/: App.kt
shared/src/commonMain/kotlin/model/: ExtractProgress.kt  PartitionInfo.kt  PayloadMetadata.kt
shared/src/commonMain/kotlin/native/: PayloadExtractNative.kt
shared/src/commonMain/kotlin/state/: AppViewModel.kt
shared/src/commonMain/kotlin/ui/: CompactContent.kt  MainScreen.kt  WideScreenContent.kt
shared/src/commonMain/kotlin/ui/component/: ErrorSection.kt  ExtractSettingsCard.kt  InputCard.kt  PartitionList.kt  PartitionListItem.kt  PayloadInfoCard.kt
shared/src/commonMain/kotlin/util/: FilePicker.kt  FileUtils.kt  PlatformUtils.kt  Preferences.kt  WindowUtils.kt
shared/src/desktopMain/kotlin/native/: PayloadExtractNative.desktop.kt
shared/src/desktopMain/kotlin/util/: FilePicker.desktop.kt  PlatformUtils.desktop.kt  Preferences.desktop.kt
(+4 files in other folders)
