[package]
name = "payload-extract-jni"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[lib]
crate-type = ["cdylib"]

[dependencies]
payload-extract = { git = "https://github.com/YuKongA/payload_extract_rs", default-features = false }
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", default-features = false, features = ["std"] }
anyhow = "1"

[features]
default = ["native-tls"]
native-tls = ["payload-extract/http-native-tls"]
vendored-tls = ["payload-extract/http-vendored-tls"]
