[package]
name = "payload-extract-jni"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"

[lib]
crate-type = ["cdylib"]

[dependencies]
payload-extract = { git = "https://github.com/YuKongA/payload_extract_rs", default-features = false }
jni = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", default-features = false, features = ["std"] }
anyhow = "1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["native-tls"]
native-tls = ["payload-extract/http-native-tls"]
rustls-tls = ["payload-extract/http-rustls"]
